--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./media:/opt/media
       - ./static:/opt/static
+      - ./postgres_data:/opt/postgres_data
     env_file:
       - .env
     ports:
